color of divs inside shapes

--- a/animation/style.css
+++ b/animation/style.css
@@ -9,3 +9,15 @@ color:red;
 #shapes{
 background-color: black;
 }
+#triangle{
+background-color: green;
+}
+#square{
+background-color: blue;
+}
+#rect{
+background-color: yellow;
+}
+#circle{
+background-color: red;
+}
