--- a/animation/style.css
+++ b/animation/style.css
@@ -28,7 +28,8 @@ display: inline-block;
 height: 100px;
 width: 100px;
 background-color:white;
-margin: 20px;
+margin: 40px;
+border: 1px solid black;
 }
 
 
