--- a/animation/style.css
+++ b/animation/style.css
@@ -58,3 +58,21 @@ border: 1px solid black;
 margin: 3px;
 display: inline-block;
 }
+/*Drawing the circle*/
+#the-circle{
+height: 100px;
+width: 100px;
+background-color: white;
+border: 1px solid black;
+border-radius: 100%;
+margin: 40px;
+}
+
+
+
+
+
+
+
+
+
