--- a/animation/style.css
+++ b/animation/style.css
@@ -16,6 +16,23 @@ border: 1px solid black;
 margin: 3px;
 display: inline-block;
 }
+/*Drawing the rectangle*/
+
+#the-triangle{
+height: 0px;
+width: 0px;
+border-left: 30px solid transparent;
+border-right: 30px solid transparent;
+border-bottom: 60px solid black;
+background-color: white;
+margin: 40px;
+
+}
+
+
+
+
+
 #square{
 background-color: blue;
 border: 1px solid black;
