--- a/animation/style.css
+++ b/animation/style.css
@@ -23,8 +23,8 @@ height: 0px;
 width: 0px;
 border-left: 30px solid transparent;
 border-right: 30px solid transparent;
-border-bottom: 60px solid black;
-background-color: white;
+border-bottom: 60px solid white;
+background-color: green;
 margin: 40px;
 
 }
