--- a/animation/style.css
+++ b/animation/style.css
@@ -29,10 +29,6 @@ margin: 40px;
 
 }
 
-
-
-
-
 #square{
 background-color: blue;
 border: 1px solid black;
@@ -83,6 +79,40 @@ background-color: white;
 border: 1px solid black;
 border-radius: 100%;
 margin: 40px;
+}
+
+
+/*Stylng ssection 3*/
+#sec3{
+display: block;
+}
+/*#one{
+height: 150px;
+width: 150px;
+border-radius: 100%;
+display:inline-block;
+margin: 50px;
+}
+#two{
+height: 150px;
+width: 150px;
+border-radius: 100%;
+display: inline-block;
+margin: 50px;
+}
+#three{
+height: 150px;
+width: 150px;
+border-radius: 100%;
+display: inline-block;
+margin: 50px;
+}*/
+.circ{
+height: 150px;
+width: 150px;
+border-radius: 100%;
+display: inline-block;
+margin: 50px;
 }
 
 
